# safe

./: .editorconfig  .env  .env.backup  .flake8  .gitignore  .pre-commit-config.yaml  100_percent_implementation_plan.md  CHANGELOG.md  CITATION.cff  EVALUATION_COMPLETION_SUMMARY.md  EVIDENCE_QUALITY_NOTES.md  EXECUTION_PLAN_FINAL.md  EXECUTIVE_SUMMARY.md  FINAL_100_PERCENT_SUMMARY.md  FINAL_ENGINEERING_ASSESSMENT.md  FINAL_EVALUATION_SUMMARY.md  FIXED_IMPLEMENTATION_README.md  FIXED_MULTI_MODEL_EVALUATION.md  IMPLEMENTATION_EVALUATION_REPORT.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_CHECKLIST.md  LEADERSHIP_COMMUNICATION.md  LICENSE  LINTING_SETUP.md  MATHEMATICAL_RECONCILIATION.md  MVP_DEMO.md  Makefile  OBJECTIVE_PROGRESS_SIGNALS.md  OVERNIGHT_ACTION_PLAN.md  QUICK_FIXES_SUMMARY.md  README.md  README_STRATEGIC.md  REALITY_CHECK_ASSESSMENT.md  REAL_MODEL_SETUP.md  REFINED_PLAN_EXECUTION_SUMMARY.md  RELEASE_CHECKLIST.md  RESULTS_ORGANIZATION.md  (+99 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  evidence.yml  python-app.yml  security.yml  validate-docs.yml
changelogs/: file_snapshot.json
config/: settings.yaml
configs/: deduction_mini.json
demo/: baseline.json  harm_prompts.json  oversight.json  safety.json
docs/: CHANGELOG.md  architecture.md
logs/: safety_test_20250621_190307.json  safety_test_20250621_191315.json  safety_test_20250621_191833.json  smoke_test_results.json
oversight/: __init__.py  __main__.py  best_of_n.py  cli.py  collusion_mitigation.py  config.py  deduction_loop.py  enhanced_azr_loop.py  errors.py  fail_case_analysis.py  hhh_filter.py  humaneval_integration.py  integrated_pipeline.py  kl_analysis.py  metrics.py  model.py  model_wrapper.py  models.py  red_team_suite.py  referee.py  runner.py  transparency_system.py  validation.py
oversight/core/: __init__.py  config.py  deduction_loop.py  errors.py  metrics.py  model.py  runner.py
oversight/features/: __init__.py  hhh_filter.py  humaneval_integration.py  kl_analysis.py  red_team_suite.py  referee.py  reward_scorer.py  self_alignment_metrics.py  tradeoff_analysis.py
oversight/stubs/: __init__.py  model_stub.py
oversight_artifacts/: README.md  bench_latest.json  coverage.xml  dashboard_20250621.html
oversight_curriculum.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
plots/: analysis_summary.md
resonant_filtering/: hhh_filter.py  model.py
resonant_filtering/core/: __init__.py  config.py  deduction_loop.py  errors.py  metrics.py  model.py  runner.py
resonant_filtering/features/: humaneval_integration.py  kl_analysis.py  red_team_suite.py  reward_scorer.py  self_alignment_metrics.py
results/: 100_percent_implementation_20250622_125121.json  baseline_demo.csv  bench_latest.json  cap_baseline.json  collusion_mitigation.json  collusion_mitigation_report.txt  combined_results.json  comparison_report.txt  comprehensive_report.txt  core_fixes_results.json  demo_latency_20250622.csv  enhanced_azr_cycle_1_20250621_165808.json  enhanced_azr_cycle_1_20250621_170416.json  enhanced_azr_cycle_1_20250621_172854.json  enhanced_azr_cycle_1_20250621_173312.json  enhanced_azr_cycle_1_20250622_010402.json  enhanced_azr_cycle_2_20250621_170010.json  enhanced_azr_cycle_2_20250621_171110.json  enhanced_azr_cycle_2_20250621_173038.json  enhanced_azr_cycle_2_20250621_175001.json  enhanced_azr_final_20250621_170010.json  enhanced_azr_final_20250621_171110.json  enhanced_azr_final_20250621_173038.json  enhanced_azr_summary_20250621_170010.csv  enhanced_azr_summary_20250621_171110.csv  enhanced_azr_summary_20250621_173038.csv  enhanced_azr_summary_20250621_175001.csv  execution_summary_20250621_163738.txt  execution_summary_20250622_103918.txt  execution_summary_20250622_103943.txt  execution_summary_20250622_104007.txt  execution_summary_20250622_104032.txt  fail_case_appendix.txt  fail_cases.json  harm_200_results.csv  harm_suite_results_20250622.csv  humaneval_results_20250621_165414.json  humaneval_results_20250622_0317.json  humaneval_summary_20250621_165414.csv  kl_analysis.json  (+15 more)
results/benchmarks/: benchmark_20250621.json
results/enhanced_demo_20250622_115339/: data.json  report.txt  summary.md
results/enhanced_demo_20250622_115347/: data.json  report.txt  summary.md
results/evaluation_20250622_102603/: report.txt
results/evaluation_20250622_103943/: data.json  report.txt
results/evaluation_20250622_104006/: data.json
results/evaluation_20250622_104032/: report.txt
results/evaluation_20250622_104054/: data.json
results/fixed_multi_model_evaluation/: comprehensive_results.json
results/fixed_multi_model_evaluation/individual_models/: claude-3-5-haiku-20241022_results.json  claude-3-5-sonnet-20240620_results.json  claude-3-5-sonnet-20241022_results.json  claude-3-7-sonnet-20250219_results.json  claude-opus-4-20250514_results.json  claude-sonnet-4-20250514_results.json
results/full_implementation_20250622_122857/: data.json
scripts/: artifact_manager.py  blocker_tracker.py  changelog_tracker.py  generate_qr.py  nightly_benchmark.py  progress_monitor.py  qa_checklist.py  quick_fix_monitor.py  release.sh  release_smoke_test.py  safety_dashboard.py  smoke_test.py
src/: __main__.py  analysis.py  best_of_n.py  collusion_mitigation.py  config.py  deduction_loop.py  enhanced_azr_loop.py  errors.py  fail_case_analysis.py  hhh_filter.py  integrated_pipeline.py  kl_analysis.py  metrics.py  model.py  red_team_suite.py  referee.py  runner.py  transparency_system.py  validation.py
tests/: best_of_n_test.py  conftest.py  test_deduction_loop.py  test_smoke.py
tests/integration/: pipeline_test.py  test_pipeline.py
tests/legacy/: test_collusion.py
tools/: smoke_humaneval.py  write_metric_delta.py
